(Bug) => zindex and overflow-x

--- a/assets/Style/main.css
+++ b/assets/Style/main.css
@@ -115,14 +115,14 @@
   font-family: "YekanBakh";
   padding: 0;
   margin: 0%;
-  overflow-x: hidden;
+  
 }
 
 .main{
   display: block;
   position: relative;
   padding-top: 30px;
-  z-index: -1;
+  overflow-x: hidden;
 }
 
 /*btn sabet*/
